# quixotic

./: .gitignore  TODO.md  pyproject.toml
src/_internal/check/: __init__.py  types.py
src/_internal/ir/: factory.py
src/common/exceptions/: __init__.py
src/common/interfaces/: __init__.py  builder.py  opcode.py  printable.py  visitor.py
src/common/ir/: __init__.py  types.py
src/common/logger/: __init__.py  builder.py  utils.py
src/common/tools/: __init__.py  chain.py  check.py  dispatcher.py  dp_factory.py  flyweight.py  impl.py  same.py  sig2echo.py  unique.py
src/core/: __init__.py  types.py
src/core/bfgen/: __init__.py  code.py  gen.py  pointer.py  types.py  utils.py
src/core/emulator/: __init__.py  emu.py
src/core/exceptions/: __init__.py  base.py  tokens.py
src/core/nodes/: __init__.py  base.py  commands.py  injection.py  procedure.py  types.py  utils.py  visitor.py
src/core/opcodes/: __init__.py  codes.py  owner.py  utils.py  walker.py
src/core/prelude/: __init__.py  dtypes.py  opcodes.py  visitor.py
src/internal/ir/: __init__.py  factory.py  opcode.py  types.py
src/ir/: __init__.py  check.py  dtype.py  exceptions.py  factory.py  opcode.py  state.py  types.py  utils.py  visitor.py  walker.py
src/ir/chains/: __init__.py  check.py  exceptions.py  factory.py
src/ir/dtypes/: __init__.py  base.py  const.py
src/ir/factory/: __init__.py  chain.py  sig_to_code.py
src/ir/opcodes/: __init__.py  base.py  proc.py  (+1 more)
src/riscv/: __init__.py  dtypes.py  opcodes.py
tests/common/: tools.py
tests/core/: nodes.py
tests/tools/: cls.py  func.py
(+50 files in other folders)
