[project]
name = "quixotic"
version = "0.1.0"
description = "Will add something here later."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
]


[tool.mypy]
strict = true
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
disable_error_code = []


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.ignore = [
  "B008",
  "C901",
  "W191",
  "UP007",
  "UP006",
]
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "C",
  "B",
  "UP",
]
exclude = [".venv"]


[tool.pytest.ini_options]
python_files = "tests/*.py"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
